[gd_scene load_steps=4 format=3 uid="uid://d4jp8o6asoxq1"]

[ext_resource type="Texture2D" uid="uid://bmbwdcmikaaa" path="res://Resources/YourListScreen.png" id="1_gtr7w"]
[ext_resource type="Script" uid="uid://dg08ktrqnvbxe" path="res://Scripts/ListViewer.gd" id="2_tc1vx"]
[ext_resource type="Script" uid="uid://cxbqe11pos07d" path="res://Scripts/ApiClient.gd" id="3_q0dnb"]

[node name="YourListScreen" type="Sprite2D"]
position = Vector2(190.00002, 287)
scale = Vector2(0.7761481, 0.76097065)
texture = ExtResource("1_gtr7w")

[node name="home button" type="Button" parent="."]
offset_left = -227.0
offset_top = -357.0
offset_right = -164.0
offset_bottom = -300.0
flat = true

[node name="play button" type="Button" parent="."]
offset_left = 158.0
offset_top = -354.0
offset_right = 223.0
offset_bottom = -304.0
flat = true

[node name="ListViewer" type="Node" parent="."]
script = ExtResource("2_tc1vx")

[node name="ApiClient" type="Node" parent="ListViewer"]
script = ExtResource("3_q0dnb")
metadata/_custom_type_script = "uid://cxbqe11pos07d"

[connection signal="pressed" from="home button" to="ListViewer" method="home_presssed"]
[connection signal="pressed" from="play button" to="ListViewer" method="play_presssed"]
